--- a/app/components/paki-components/LeaderboardMemberTimeline/LeaderboardMemberTimeline.module.css
+++ b/app/components/paki-components/LeaderboardMemberTimeline/LeaderboardMemberTimeline.module.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    color: #ffffff
 }
 
 .LeaderboardMemberTimelineInfoMember {
