--- a/app/audit-leaderboard/AuditLeaderboard.module.css
+++ b/app/audit-leaderboard/AuditLeaderboard.module.css
@@ -22,14 +22,15 @@
 
 .AuditLeaderboardTimeline {
     display: flex;
-    flex: 1;
     flex-direction: column;
+    flex: 1.5;
     background-color: #1C0333;
     margin: 10px;
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
-    padding: 5px 10px 5px 10px;
+    padding: 40px 30px 5px 30px;
+    outline: #3A0866 solid 2px;
 }
 
 .AuditLeaderboardTopBar {
