--- a/app/components/paki-components/UserProfileModal/UserProfileModal.module.css
+++ b/app/components/paki-components/UserProfileModal/UserProfileModal.module.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: #00000059;
+    background-color: #00000092;
     z-index: 1000;
 }
 
@@ -19,10 +19,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-    background-color: white;
-    width: 30%;
-    height: 20%;
+    background-color: #1C0333;
+    width: 60%;
+    height: 80%;
     border-radius: 15px;
     padding: 20px;
 }
@@ -32,3 +31,9 @@
     flex-direction: row;
     justify-content: flex-end;
 }
+
+.CloseModal {
+    color: #ffffff;
+    font-weight: bold;
+}
+
