--- a/app/audit-contests/auditContest.module.css
+++ b/app/audit-contests/auditContest.module.css
@@ -1,5 +1,6 @@
 .AuditContestWrapper{
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -8,11 +9,26 @@
     padding: 20px;
 }
 
-.Audit{
+.audit{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     height: 100%;
     padding: 20px;
+}
+
+.sectionWrapper{
+    border: solid 1px #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+}
+
+#upcoming{
+    justify-content: left;
 }
