user profile half done

--- a/app/components/paki-components/LeaderboardMember/LeaderboardMember.module.css
+++ b/app/components/paki-components/LeaderboardMember/LeaderboardMember.module.css
@@ -5,6 +5,7 @@
     padding: 8px 15px 8px 15px;
     margin: 10px 0px 10px 0;
     background-color: #280745;
+    align-items: center;
 }
 
 .LeaderboardMemberContainer:hover {
