--- a/app/audit-contests/auditContest.module.css
+++ b/app/audit-contests/auditContest.module.css
@@ -1,6 +1,5 @@
 .AuditContestWrapper{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
