--- a/app/audit-leaderboard/AuditLeaderboard.module.css
+++ b/app/audit-leaderboard/AuditLeaderboard.module.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     padding-top: 40px;
+    color: white;
 }
 
 .AuditLeaderboardList {
@@ -15,7 +16,6 @@
     margin: 10px;
     font-size: 1.5rem;
     line-height: 2rem;
-    font-weight: 700;
     padding: 40px 30px 5px 30px;
     outline: #3A0866 solid 2px;
 }
@@ -28,7 +28,6 @@
     margin: 10px;
     font-size: 1.5rem;
     line-height: 2rem;
-    font-weight: 700;
     padding: 40px 30px 5px 30px;
     outline: #3A0866 solid 2px;
 }
