--- a/app/components/paki-components/UserProfileModal/UserProfileModal.module.css
+++ b/app/components/paki-components/UserProfileModal/UserProfileModal.module.css
@@ -19,10 +19,14 @@
     display: flex;
     flex-direction: column;
     background-color: #1C0333;
+    padding: 10px 20px 10px 20px;
     width: 60%;
     height: 80%;
-    border-radius: 15px;
-    padding: 20px;
+    /* rgb(red, green, blue, opacity); */
+    box-shadow: 6px -6px 0px 0px rgb(102, 29, 170);
+    overflow-y: auto;
+    overflow: hidden;
+
 }
 
 .ModalTopBar {
@@ -47,7 +51,13 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.UserProfileIssues {
+    display: flex;
+    flex-direction: column;
 }
 
 .UserProfileRecentIssues {
@@ -57,12 +67,14 @@
 .UserProfileProfilePhoto{
     height: 200px;
     width: 200px;
+    align-self: center;
 }
 
 .UserProfileUsername {
     font-size: 20px;
     color: white;
     font-weight: 700;
+    align-self: center;
 }
 
 .UserProfileRole {
@@ -70,13 +82,9 @@
     padding: 3px 8px 3px 8px;
     border-radius: 15px;
     text-align: center;
+    align-self: center;
 }
 
-.UserProfileSecondSection {
-    display: flex;
-    flex-direction: column;
-    flex : 1;
-}
 
 .UserProfileStats {
     display: flex;
@@ -87,7 +95,6 @@
     flex : 1;
     display: flex;
     flex-direction: column;
-    align-self: flex-start;
 }
 
 .UserProfileIssuesStatsElement {
@@ -95,9 +102,15 @@
 }
 
 .UserProfileIssuesStatsElementTitle {
-    font-size: .875rem;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: #D1D5DB;
 }
 
 .UserProfileSecondSection {
-    flex: 3;
+    flex : 3;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
 }
