--- a/app/audit-leaderboard/AuditLeaderboard.module.css
+++ b/app/audit-leaderboard/AuditLeaderboard.module.css
@@ -11,12 +11,12 @@
 .AuditLeaderboardList {
     display: flex;
     flex-direction: column;
-    flex: 1.5;
+    flex: 2.5;
     background-color: #1C0333;
-    margin: 10px;
+    margin: 10px 40px 10px 40px;
     font-size: 1.5rem;
     line-height: 2rem;
-    padding: 40px 30px 5px 30px;
+    padding: 20px 30px 5px 30px;
     outline: #3A0866 solid 2px;
 }
 
@@ -25,7 +25,7 @@
     flex-direction: column;
     flex: 1.5;
     background-color: #1C0333;
-    margin: 10px;
+    margin: 10px 40px 10px 20px;
     font-size: 1.5rem;
     line-height: 2rem;
     padding: 40px 30px 5px 30px;
