--- a/app/components/paki-components/LeaderboardMember/LeaderboardMember.module.css
+++ b/app/components/paki-components/LeaderboardMember/LeaderboardMember.module.css
@@ -17,14 +17,21 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-self: flex-start;
+    flex : 1;
+}
+
+.LeaderboardMemberInfoElement {
+    margin-right: 20px;
 }
 
 .LeaderboardMemberInfoMember {
-    margin-left: 4px;
-    margin-right: 4px;
+    flex : 1;
 }
 
 .LeaderboardMemberInfoProfilePhoto {
     height: 50px;
     width: 50x;
+    margin-right: 20px;
+    margin-left: 20px;
 }
