--- a/app/components/paki-components/UserProfileModal/UserProfileModal.module.css
+++ b/app/components/paki-components/UserProfileModal/UserProfileModal.module.css
@@ -65,6 +65,7 @@
     flex-direction: column;
     color: #b1b1b1;
     font-weight: bold;
+    align-items: center;
 }
 
 .UserProfileRecentIssues {
@@ -100,7 +101,7 @@
 .UserProfileStats {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: center;
 }
 
 .UserProfileIssuesStatsSection {
@@ -108,7 +109,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-right: 10px;
+    margin: 10px 80px 10px 80px;
 }
 
 .UserProfileSecondSection {
