--- a/app/components/paki-components/UserProfileModal/UserProfileModal.module.css
+++ b/app/components/paki-components/UserProfileModal/UserProfileModal.module.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     background-color: #1C0333;
-    padding: 10px 40px 50px 40px;
+    padding: 20px 40px 50px 40px;
     width: 50%;
     height: 80%;
     /* rgb(red, green, blue, opacity); */
@@ -34,14 +34,19 @@
 }
 
 .ModalTopBar {
+    position: sticky;
+    top: 0;
+    z-index: 1001; /* Ensure it's above the modal content */
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+
 }
 
 .CloseModal {
     color: #ffffff;
     font-weight: bold;
+    font-size: 1.25em;
 }
 
 /* USER PROFILE ELEMENTS */
@@ -65,13 +70,14 @@
     flex-direction: column;
     color: #b1b1b1;
     font-weight: bold;
-    align-items: center;
+    width: 100%;
 }
 
 .UserProfileStatsTitle {
     margin-top: 20px;
     margin-bottom: 15px;
     font-size: 1.3em;
+    align-self: center;
 }
 
 .UserProfileProfilePhoto{
@@ -91,12 +97,14 @@
 
 .UserProfileRole {
     background-color: #9B3BF2;
-    padding: 3px 8px 3px 8px;
-    border-radius: 15px;
+    padding: 3px 20px 3px 20px;
+    border-radius: 20px;
     text-align: center;
     align-self: center;
     margin-top: 25px;
     margin-bottom: 25px;
+    font-size: 1.3em;
+    font-weight: bold;
 }
 
 
