--- a/app/audit-leaderboard/AuditLeaderboard.module.css
+++ b/app/audit-leaderboard/AuditLeaderboard.module.css
@@ -1,12 +1,12 @@
 .AuditLeaderboardContainer {
     display: flex;
     flex-direction: row;
-    background-color: #210938;
     width: 100%;
     height: 100%;
     padding-top: 40px;
-    color: #FEFCFB;
-    padding: 100px 100px 300px 100px;
+    color: #000000;
+    padding: 20px 100px 300px 100px;
+    font-family: "Instrument Sans", sans-serif;
 }
 
 .AuditLeaderboardTopBar {
@@ -30,12 +30,10 @@
     display: flex;
     flex-direction: column;
     flex: 2.5;
-    background-color: #1C0333;
     margin: 10px 40px 10px 40px;
     font-size: 1.5rem;
     line-height: 2rem;
     padding: 20px 30px 5px 30px;
-    outline: #3A0866 solid 2px;
 }
 
 .AuditLeaderboardTimeline {
