--- a/app/components/paki-components/LeaderboardMember/LeaderboardMember.module.css
+++ b/app/components/paki-components/LeaderboardMember/LeaderboardMember.module.css
@@ -4,7 +4,8 @@
     justify-content: space-between;
     padding: 8px 15px 8px 15px;
     margin: 10px 0px 10px 0;
-    background-color: #280745;
+    outline: black solid 1px;
+    border-radius: 10px;
     align-items: center;
 }
 
